<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gallery"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.detail.DetailAndTimelineFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/disclaimerCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/contactCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/disclaimer"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:background="@color/silver"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/disclaimer"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/disclaimerValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/disclaimer_value"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:linksClickable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/disclaimer"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/contactCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/appCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/disclaimerCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:background="@color/silver"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/contact"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/developerEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:minLines="2"
                        android:text="@string/developer"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/designerEmail"
                        app:layout_constraintEnd_toStartOf="@+id/developerValue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/contact" />

                    <TextView
                        android:id="@+id/developerValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:minLines="2"
                        android:text="@string/developer_email_value"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/designerEmailValue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/developerEmail"
                        app:layout_constraintTop_toBottomOf="@+id/contact" />

                    <TextView
                        android:id="@+id/designerEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:minLines="2"
                        android:text="@string/designer"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/designerEmailValue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/developerEmail" />

                    <TextView
                        android:id="@+id/designerEmailValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:minLines="2"
                        android:text="@string/designer_email_value"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/designerEmail"
                        app:layout_constraintTop_toBottomOf="@+id/developerValue" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/appCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/licensesCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contactCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/appInfo"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:background="@color/silver"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/app_info"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/app_version"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/versionValue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appInfo"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/versionValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/app_version_value"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/version"
                        app:layout_constraintTop_toBottomOf="@+id/appInfo"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/licensesCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/licenseHeader"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:background="@color/silver"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/licenses"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/licenseRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/licenseHeader"
                        tools:itemCount="5"
                        tools:listitem="@layout/license_item" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
